@@ -50,6 +50,8 @@ Where "NUMBER" is the bug number.
   - using emit_print/command/recv will no longer trigger their own
     callbacks
   - Fix compiling issues with versions older than 5.8.2.
+  - Make all scripts appear in the "Plugins and Scripts" window, even
+    those that do not call register().
 
 ----------------------------------------------------------------------
  2.6.0 - 03/Nov/2005
